--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="STA 3222 Introduction to Time Series Analysis" />
+  <meta name="keywords" content="STA 3222, Introduction to Time Series Analysis" />
+  <title>STA 3222: Introduction to Time Series Analysis</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/script.js" defer></script>
+</head>
+
+<body class="bg-primary text-secondary fs-400 ff-body flow">
+  <header class="wrapper">
+    <div class="primary-header | flex">
+      <a class="skip-nav-link | bg-accent text-primary fs-400 no-underline" href="#main">Skip to main content</a>
+      <a class="logo | fs-500 no-underline" href="index.html">
+        STA 3222
+      </a>
+      <button class="header-menu-toggler" data-menu-toggler aria-controls="primary-navigation" aria-expanded="false"
+        aria-label="Menu">
+        <span class="hamburger"></span>
+      </button>
+      <nav>
+        <ul id="primary-navigation" class="header-menu | text-secondary uppercase flex" data-header-menu role="list"
+          data-visible="false">
+          <li>
+            <a href="#" aria-current="page">Class notes</a>
+          </li>
+          <li><a href="#">Exercises</a></li>
+          <li><a href="#">Further Reading</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main id="main">
+    <!-- Hero section -->
+
+  </main>
+</body>
