feat: built hero section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   </header>
   <main id="main">
     <!-- Hero section -->
-
+    <article class="hero text-primary grid">
+      <div class="wrapper flow">
+      <h1 class="fs-800">Welcome to STA 3222: Introduction to Time Series Analysis</h1>
+      <a class="hero__cta fs-500 bg-accent btn-primary" href="#">Learn more</a>
+      </div>
+    </article>
   </main>
 </body>
