chore: redesigned the hero section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
   </header>
   <main id="main">
     <!-- Hero section -->
-    <article class="hero text-primary grid">
-      <div class="wrapper flow">
+    <article class="hero text-primary">
+      <div class="wrapper grid">
+        <div class="flow">
       <h1 class="fs-800">Welcome to STA 3222: Introduction to Time Series Analysis</h1>
       <a class="hero__cta fs-500 bg-accent btn-primary" href="#">Learn more</a>
+      </div>
       </div>
     </article>
   </main>
